test/visibility/empty/onlyNothing.good
onlyNothing.chpl:14: In function 'main':
onlyNothing.chpl:15: error: unresolved call 'foo()'
